--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mrinal Narain's personal webpage(icskzmrinal)</title>
+</head>
+<body>
+heyy guys
+</body>
+</html>
