added basic css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mrinal Narain's personal webpage(icskzmrinal)</title>
+	<title>icskzmrinal
+	</title>
+	<link rel="stylesheet" href="stylesheets/main.css">
+	<!--<script src="javascript/main.js"></script>-->
 </head>
 <body>
-heyy guys
+	<div id="container">
+		<div id="header">
+			<h1>Mrinal Narain</h1>
+		</div>
+		<div id="nav">
+			<h3>Navigation</h3>
+			<ul>
+				<li><a class="selected" href="">Home</a></li>
+				<li><a href="">About</a></li>
+				<li><a href="">Contact</a></li>
+			</ul>
+		<img src="pic.jpg" width="200" height="200" alt="mrinal narain pic">
+		</div>
+		<div id="main">
+			<h2>Home page</h2>
+			<div id="content">
+				<h3>Let's know about icskzmrinal</h3>
+				<h5>I'm here to put a ding.</h5>
+				<p>I am a 2nd yr Undergradute student. I study in IIT Kharagpur.<br />I am enrolled in the Mathematics and Computing course</p>
+				<p>I am from Muzaffarpur, Bihar</p>
+				<p>My github username is icskzmrinal</p>
+			</div>
+		</div>
+		<div id="footer">
+			copyright &copy; 2018 Mrinal Narain
+		</div>
+ 	</div>
 </body>
 </html>
