--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>iCSKZMRINAL
+	<title>icskzmrinal
 	</title>
 	<link rel="stylesheet" href="stylesheets/main.css">
 	<script src="javascript/main.js"></script>
@@ -14,8 +14,8 @@
 		<div id="nav">
 			<h3>Navigation</h3>
 			<ul>
-				<li><a class="selected" href="index.html" title="Go to Home">Home</a></li>
-				<li><a href="about.html" title="Go to About">About</a></li>
+				<li><a href="index.html" title="Go to Home">Home</a></li>
+				<li><a class="selected" href="about.html" title="Go to About">About</a></li>
 				<li><a href="contact.html" title="Go to Contact">Contact</a></li>
 			</ul>
 		<img src="pic.jpg" width="200" height="200" alt="mrinal narain pic">
@@ -23,10 +23,13 @@
 		<div id="main">
 			<h2><i>iCSKZMRINAL</i></h2>
 			<div id="content">
-				<h5>I'm here to put a ding.</h5>
-				<p>I am a 2<sup>nd</sup> yr Undergradute student at IIT Kharagpur.<br />My branch is Mathematics and Computing<br>
-				I am from Muzaffarpur, Bihar</p>
-				<p>Welcome to my Website</p>
+				<h5>About me</h5>
+				<ul>
+					<li>My skills comprise of C, HTML, CSS, JavaScript, Python</li>
+					<li>I like to read biographies and books related to corporate world</li>
+					<li>I like playing Football, CS:GO, COD</li>
+					<li>I am big foodie and love to cook</li>
+				</ul>
 			</div>
 		</div>
 		<div id="footer">
