--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>iCSKZMRINAL
+	<title>icskzmrinal
 	</title>
 	<link rel="stylesheet" href="stylesheets/main.css">
 	<script src="javascript/main.js"></script>
@@ -14,19 +14,23 @@
 		<div id="nav">
 			<h3>Navigation</h3>
 			<ul>
-				<li><a class="selected" href="index.html" title="Go to Home">Home</a></li>
+				<li><a href="index.html" title="Go to Home">Home</a></li>
 				<li><a href="about.html" title="Go to About">About</a></li>
-				<li><a href="contact.html" title="Go to Contact">Contact</a></li>
+				<li><a class="selected" href="contact.html" title="Go to Contact">Contact</a></li>
 			</ul>
 		<img src="pic.jpg" width="200" height="200" alt="mrinal narain pic">
 		</div>
 		<div id="main">
 			<h2><i>iCSKZMRINAL</i></h2>
 			<div id="content">
-				<h5>I'm here to put a ding.</h5>
-				<p>I am a 2<sup>nd</sup> yr Undergradute student at IIT Kharagpur.<br />My branch is Mathematics and Computing<br>
-				I am from Muzaffarpur, Bihar</p>
-				<p>Welcome to my Website</p>
+				<h5>Contact me</h5>
+				<ul>
+					<li>Name: Mrinal Narain</li>
+					<li>E.mail: narainmrinal00@gmail.com / narainmrinal00@iitkgp.ac.in</li>
+					<li>Phone: 8946962423</li>
+					<li>Address: E-207, R.K. Hall, IIT Kharagpur, Westbengal-721302</li>
+				</ul>
+				<p>My github username is <a href="https://github.com/icskzmrinal">iCSKZMRINAL</a></p>
 			</div>
 		</div>
 		<div id="footer">
