--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
                     </div>
                     <div class="col-11">
                         <h5>Email</h5>
-                        <p><a href="mailto:narainmrinal00@email.com"> narainmrinal00@gmail.com </a></p>
-                        <p><a href="mailto:narainmrinal00@iitkgp.ac.in"> narainmrinal00@iitkgp.ac.in</a></p>
+                        <p><a href="mailto:narainmrinal00@email.com"> narainmrinal00@gmaildotcom </a></p>
+                        <p><a href="mailto:narainmrinal00@iitkgp.ac.in"> narainmrinal00@iitkgpdotacdotin</a></p>
                     </div>
                     <div class="col-1 pr-0 icon mt-4">
                         <i class="fa fa-phone" aria-hidden="true"></i>
